# cookiecutter-custompy

./: LICENSE  README.md  README.rst  cookiecutter.json  setup.cfg
.github/workflows/: gen_cookie.yml  tests.yml
{{cookiecutter.project_slug}}/: .gitignore  README.md  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: release-checklist.md
{{cookiecutter.project_slug}}/.github/workflows/: docs.yml  tests.yml
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/requirements/: requirements_dev.txt
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
