[metadata]
name=cookiecutter-custompy
version = 0.1.0
description=cookiecutter for new python packages
author=Isabel Zimmerman
author_email=isabel.zimmerman@rstudio.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[bdist_wheel]
universal = 1

[options]
packages = find:
include_package_data = True
zipsafe = False

python_requires = >=3.7
install_requires =
    cookiecutter

[options.extras_require]
dev =
    pytest
    pytest-cov
    sphinx
    sphinx-autodoc-typehints
    myst-parser
    sphinx-book-theme
