{%- set license_classifiers = {
    'MIT license': 'License :: OSI Approved :: MIT License'
} %}

[metadata]
name='{{ cookiecutter.project_slug }}'
version='{{ cookiecutter.version }}'
description="{{ cookiecutter.project_short_description }}"
author="{{ cookiecutter.full_name.replace('\"', '\\\"') }}"
author_email='{{ cookiecutter.email }}'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers=[
{%- if cookiecutter.open_source_license in license_classifiers %}
    '{{ license_classifiers[cookiecutter.open_source_license] }}',
{%- endif %}
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
{%- if cookiecutter.open_source_license in license_classifiers %}
license="{{ cookiecutter.open_source_license }}"
{%- endif %}

[bumpversion]
current_version = {{ cookiecutter.version }}
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

{%- if cookiecutter.use_pytest == 'y' %}
[tool:pytest]
collect_ignore = ['setup.py']
{%- endif %}

[options]
packages = find:
include_package_data = True
zipsafe = False

python_requires = >=3.7
install_requires =


[options.extras_require]
dev =
    pytest
    pytest-cov
